gcp/kubernetes/scripts/nginx/working-https-ingress/the3dsoft-https-ingress-prod - Copy.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: the3dsoft-https-ingress-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: the3dsoft.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
  tls:
  - secretName: tls-prod-cert
    hosts:
    - the3dsoft.com
